<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f7f3"
    tools:context=".presentation.CurrentlyPlayingActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/current_playing_card"
        android:layout_width="550dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/league_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="24dp"
                android:contentDescription="@string/card_team_logo" />

            <TextView
                android:id="@+id/league_name"
                android:layout_toRightOf="@+id/league_logo"
                android:text="@string/league_name"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/team_name"
                android:textSize="24sp"
                android:layout_below="@+id/league_logo"
                android:text="@string/team_name"
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/game_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/team_name"
                android:layout_marginLeft="128dp"
                android:text="@string/display_score"
                android:textSize="96sp">
            </TextView>

            <ImageView
                android:id="@+id/team_picture"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/card_team_logo" />

            <TextView
                android:id="@+id/game_time"
                android:text="@string/display_time"
                android:textSize="16sp"
                android:layout_margin="24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>