<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/currentlyPlayingMenu"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:textColor="@color/black"
        android:text="@string/currently_playing"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:backgroundTint="@color/light_purp"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/teamRostersMenu"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_purp"
        android:padding="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:textColor="@color/black"
        android:text="@string/team_rosters"
        android:layout_below="@+id/currentlyPlayingMenu"
        android:gravity="center"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/soonMenu"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_purp"
        android:padding="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:textColor="@color/black"
        android:text="@string/comming_soon"
        android:layout_below="@+id/teamRostersMenu"
        android:gravity="center"
        android:textSize="50sp"/>

</RelativeLayout>