<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:cardCornerRadius="20dp"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/player_pic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="20dp"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="0dp"

                android:layout_toEndOf="@+id/player_pic"
                android:text="@string/something"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/playerNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@id/player_pic"
                android:text="@string/_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:id="@+id/position"
                android:layout_toEndOf="@id/playerNum"
                android:text="@string/rw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:id="@+id/shot"
                android:layout_toEndOf="@id/position"
                android:text="@string/rw" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>