<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/standing_cardview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/teampicture"
            android:layout_gravity="center_vertical"
            android:src="@drawable/jets"
            android:id="@+id/team_pic_standingss"
            android:layout_width="50dp"
            android:layout_height="50dp">
        </ImageView>

        <TextView
            android:id="@+id/standing_team_name"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/teamname"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/standing_wins"
            android:layout_marginStart="33dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/standing_losses"
            android:layout_marginStart="33dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/standing_overtime_losses"
            android:layout_marginStart="33dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/standing_points"
            android:layout_marginStart="37dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/standing_winstreak"
            android:layout_marginStart="37dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/w1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

</androidx.cardview.widget.CardView>